--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 
-
 .btn-icon-only {
     padding-right: 3px;
     padding-left: 3px
@@ -1360,8 +1359,6 @@ table.dataTable.no-footer {
 }
 
 
-
-
 .scrollbar {
     margin-left: 30px;
     float: left;
@@ -1472,6 +1469,7 @@ label {
     line-height: 1.5 !important;
     border-radius: 3px !important;
 }
+
 .form-control-xs {
     height: calc(1em + .375rem + 2px) !important;
     padding: .125rem .25rem !important;
@@ -1479,6 +1477,7 @@ label {
     line-height: 1.5;
     border-radius: .2rem;
 }
+
 .small-input {
     outline: none;
     border: 1px dashed lightgray !important;
@@ -1549,4 +1548,8 @@ td {
 
 .scrollbar-secondary {
     scrollbar-color: #aa66cc #F5F5F5;
+}
+
+.protected {
+    color: gray!important;
 }
