--- a/public/css/instant-invoice.css
+++ b/public/css/instant-invoice.css
@@ -61,6 +61,7 @@ textarea:focus {
     margin-bottom: 10px;
     border: 1px solid gray;
 }
+
 .save {
     color: dodgerblue;
     background: ghostwhite;
@@ -528,7 +529,7 @@ b, body, div, h1, h2, h3, h4, h5, h6, img, li, p, span, ul {
 }
 
 b, body, input, p, textarea {
-    font-family: Zoho Puvi Regular, -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif
+    /*font-family: Zoho Puvi Regular, -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif*/
 }
 
 li, ul {
@@ -1491,4 +1492,68 @@ input[READONLY]:focus {
     .add, .del, [class^=mobile-] {
         background-image: url(/invoice/inv-gen/icon-blk-2x.png)
     }
+}
+
+.i_ul > li {
+    color: black;
+
+}
+.item-list {
+    position: relative;
+    padding-left: 10px;
+    width: 100%;
+    border-left: 1px solid black;
+}
+.item-list .item {
+    position: relative;
+    line-height: 16px;
+    margin-bottom: 10px;
+    text-align: left;
+    display: block;
+    padding: 0 18px;
+    font-size: 13px;
+}
+.item-list .item:before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: -10px;
+    width: 12px;
+    height: 1px;
+    background: #000;
+}
+.item-list .item:first-child:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: -12px;
+    width: 5px;
+    height: 8px;
+    background: #fff;
+}
+.item-list .item:last-child:after {
+    content: "";
+    position: absolute;
+    top: 9px;
+    bottom: 0;
+    left: -12px;
+    width: 5px;
+    background: #fff;
+}
+.item-list .item .item-label {
+    position: relative;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 13px;
+    color: #0077cc;
+}
+.item-list .item .item-label:before {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: -16px;
+    width: 13px;
+    height: 13px;
+    border-radius: 100%;
+    background: #0077cc;
 }
