--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 .btn-icon-only {
     padding-right: 3px;
     padding-left: 3px
@@ -7,8 +6,6 @@
 .table td {
     vertical-align: middle
 }
-
-
 
 .table-bordered th {
     background: #e9e9e9;
@@ -45,7 +42,7 @@
     font-size: 11px
 }
 
-.navbar .nav > li > a {
+.navbar .nav>li>a {
     color: #fff !important
 }
 
@@ -87,14 +84,14 @@
     border-bottom: 1px solid #d6d6d6
 }
 
-.subnavbar .container > ul {
+.subnavbar .container>ul {
     display: inline-block;
     height: 80px;
     padding: 0;
     margin: 0
 }
 
-.subnavbar .container > ul > li {
+.subnavbar .container>ul>li {
     float: left;
     min-width: 90px;
     height: 60px;
@@ -105,7 +102,7 @@
     border-left: 1px solid #d9d9d9
 }
 
-.subnavbar .container > ul > li > a {
+.subnavbar .container>ul>li>a {
     display: block;
     height: 100%;
     padding: 0 15px;
@@ -114,12 +111,12 @@
     color: #b2afaa
 }
 
-.subnavbar .container > ul > li > a:hover {
+.subnavbar .container>ul>li>a:hover {
     color: #888;
     text-decoration: none
 }
 
-.subnavbar .container > ul > li > a > i {
+.subnavbar .container>ul>li>a>i {
     display: inline-block;
     width: 24px;
     height: 24px;
@@ -128,15 +125,14 @@
     font-size: 20px
 }
 
-.subnavbar .container > ul > li > a > span {
+.subnavbar .container>ul>li>a>span {
     display: block
 }
 
-.subnavbar .container > ul > li.active > a {
+.subnavbar .container>ul>li.active>a {
     border-bottom: 3px solid #ff7f74;
     color: #383838
 }
-
 
 .subnavbar .dropdown .dropdown-menu {
     text-align: left;
@@ -144,8 +140,6 @@
     -webkit-border-top-right-radius: 0;
     -moz-border-radius-topleft: 0;
     -moz-border-radius-topright: 0;
-
-
     top: 100%;
     left: 0;
     z-index: 1000;
@@ -309,7 +303,7 @@
     border-radius: 5px
 }
 
-.widget-header + .widget-content {
+.widget-header+.widget-content {
     border-top: none;
     -webkit-border-top-left-radius: 0;
     -webkit-border-top-right-radius: 0;
@@ -362,9 +356,6 @@
     padding: 0;
     background: 0 0;
     border: none
-}
-
-.widget-box {
 }
 
 .widget-box .widget-content {
@@ -503,7 +494,6 @@ ul.messages_layout li .message_wrap .text {
     border-top: 1px solid #cfcfcf;
     padding-top: 5px
 }
-
 
 .fc {
     direction: ltr;
@@ -714,8 +704,8 @@ html .fc, .fc table {
     position: relative;
     float: left;
     margin-top: -50%;
-    *margin-top: 0;
-    *top: -50%
+    margin-top: 0;
+    top: -50%
 }
 
 .fc-state-default .fc-button-effect {
@@ -1016,7 +1006,7 @@ table.fc-border-separate {
 }
 
 .fc-agenda-slots tr.fc-minor th.ui-widget-header {
-    *border-top-style: solid
+    border-top-style: solid
 }
 
 .fc-event-vert {
@@ -1086,7 +1076,6 @@ table.fc-border-separate {
     height: 250px
 }
 
-
 .accordion-heading {
     background: #e5e5e5
 }
@@ -1155,25 +1144,25 @@ table.fc-border-separate {
         height: auto
     }
 
-    .subnavbar .container > ul {
+    .subnavbar .container>ul {
         width: 100%;
         height: auto;
         border: none
     }
 
-    .subnavbar .container > ul > li {
+    .subnavbar .container>ul>li {
         width: 33%;
         height: 70px;
         margin-bottom: 0;
         border: none
     }
 
-    .subnavbar .container > ul > li.active > a {
+    .subnavbar .container>ul>li.active>a {
         font-size: 11px;
         background: 0 0
     }
 
-    .subnavbar .container > ul > li > a > i {
+    .subnavbar .container>ul>li>a>i {
         display: inline-block;
         margin-bottom: 0;
         font-size: 20px
@@ -1228,9 +1217,6 @@ table.fc-border-separate {
         margin-bottom: 0
     }
 
-    .subnavbar {
-    }
-
     .subnavbar .container {
         width: auto
     }
@@ -1250,7 +1236,7 @@ table.fc-border-separate {
     justify-content: space-between;
 }
 
-.menu-icon-grid > a {
+.menu-icon-grid>a {
     display: inline-flex;
     width: 7rem;
     flex-direction: column;
@@ -1265,12 +1251,12 @@ table.fc-border-separate {
 
 }
 
-.menu-icon-grid > a:hover {
+.menu-icon-grid>a:hover {
     background: #065a92;
     color: white;
 }
 
-.menu-icon-grid > a i {
+.menu-icon-grid>a i {
     font-size: 28px;
     margin-bottom: 4px;
 }
@@ -1303,7 +1289,6 @@ table.dataTable thead .sorting {
 
 table.dataTable thead .sorting_asc {
     background-image: none !important;
-
 }
 
 /*body > * {*/
@@ -1330,8 +1315,6 @@ table.dataTable thead .sorting_asc {
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
-
-    /* Position the tooltip */
     position: absolute;
     z-index: 1;
 }
@@ -1355,11 +1338,9 @@ div.dataTables_wrapper div.dataTables_length select {
     margin-left: 3px;
 }
 
-
 table.dataTable.no-footer {
     border-bottom: 0px solid #111;
 }
-
 
 .scrollbar {
     margin-left: 30px;
@@ -1457,7 +1438,6 @@ label {
     color: black !important;
     font-weight: bold;
 }
-
 
 .small-input:focus {
     outline: none;
@@ -1558,7 +1538,6 @@ td {
 
 .disabled {
     cursor: not-allowed !important;
-
 }
 
 .no-link {
@@ -1575,34 +1554,44 @@ td {
 
 .template {
     cursor: pointer;
-    color: black!important;
+    color: black !important;
 }
-.template b{
+
+.template b {
     cursor: pointer;
-    color: black!important;
+    color: black !important;
 }
 
 .template-active {
     background: #065a92 !important;
-    color: white!important;
+    color: white !important;
 }
+
 .template-active b {
     background: #065a92 !important;
-    color: white!important;
+    color: white !important;
 }
 
 .template:hover {
     opacity: 0.5;
 }
 
-
 .shimmer {
-    display:inline-block;
-    -webkit-mask:linear-gradient(-60deg,#000 30%,#0005,#000 70%) right/300% 100%;
+    display: inline-block;
+    -webkit-mask: linear-gradient(-60deg, #000 30%, #0005, #000 70%) right/300% 100%;
     background-repeat: no-repeat;
     animation: shimmer 2.5s infinite;
 }
 
 @keyframes shimmer {
-    100% {-webkit-mask-position:left}
+    100% {
+        -webkit-mask-position: left
+    }
+}
+
+#bankDepositModal .fa-close:hover {
+    color: #065a92 !important;
+}
+.fs-18{
+    font-size: 18px !important;
 }
